--- a/Task_Manager/templates/Task_Manager/login.html
+++ b/Task_Manager/templates/Task_Manager/login.html
@@ -16,21 +16,21 @@
     <p>We're sorry, but your username and password don't match</p>
   {% endif %}
 <article class="card-body">
-<!--<a href="" class="float-right btn btn-outline-primary">Sign up</a> -->
+<a href="{% url 'tasks:registration' %}" class="float-right btn btn-outline-primary">Sign up</a>
 <h4 class="card-title mb-4 mt-1">Log in</h4>
 <form action="{% url 'tasks:login' %}" method="post">
     {% csrf_token %}
     <div class="form-group">
     	<label>Your username:</label>
-        <input name="username" class="form-control" placeholder="Uživatelské jméno" type="Username">
-    </div> <!-- form-group// -->
+        <input name="username" class="form-control" placeholder="Username" type="Username">
+    </div>
     <div class="form-group">
     	<label>Your password:</label>
         <input name="password" class="form-control" placeholder="********" type="password">
-    </div> <!-- form-group// --> 
+    </div> 
     <div class="form-group">
         <button type="submit" class="btn btn-primary btn-block"> Log in  </button>
-    </div> <!-- form-group// -->                                                           
+    </div>                                                           
 </form>
 </article>
 </div> <!-- card.// -->
