Added some CSS for the change page buttons, fixed the error, that the app didn't show tasks that were added after the page loaded when you switched to other user

--- a/Task_Manager/static/css/index.css
+++ b/Task_Manager/static/css/index.css
@@ -35,3 +35,14 @@ body{
     border-radius: calc(.15rem - 1px);
     box-shadow: 0 1px 15px rgba(0,0,0,0.04), 0 1px 6px rgba(0,0,0,0.04);
 }
+
+div > .buttons {
+    margin-bottom: 1vh;
+}
+
+#choose {
+    max-width: fit-content;
+    margin: 0 auto;
+    margin-bottom: 1vh;
+    text-align: center;
+}
